--- a/application/templates/happiness_ranking.html
+++ b/application/templates/happiness_ranking.html
@@ -72,7 +72,7 @@
             The values of the six factors - GDP, Life Expectancy, Generosity, Social Support, Freedom, and Corruption - represent the extent to which each of them contributes to a country's happiness score.</p>
         <p>The PM2.5 figure is a country's mean annual exposure (micrograms per cubic meter) to the air pollution.</p>
         <p>These information together shows how people's feeling about their life might correlate with certain social and political factors, as well as the often-ignored environmental costs.</p>
-        <ul class="nav nav-pills bg-light">
+        <ul class="nav nav-pills">
           <li class="nav-item dropdown mr-md-2 mb-1">
             <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Year</button>
             <div class="dropdown-menu">
@@ -103,8 +103,8 @@
           </li>
         </ul>
         <div class="table-responsive-lg">
-            <table class="table table-hover">
-              <thead class="thead-dark">
+            <table class="table table-hover" id="happy_table">
+              <thead class="thead-dark" id="happy_table_head">
                 <tr>
                   <th scope="col">Country</th>
                   <th scope="col">Happiness Rank</th>
@@ -118,23 +118,17 @@
                   <th scope="col">PM2.5 Pollution</th>
                 </tr>
               </thead>
-              <tbody id="happiness_table_body">
-                <!-- example table row
-                <tr>
-                  <th scope="row">1</th>
-                  <td>Mark</td>
-                  <td>Otto</td>
-                  <td>@mdo</td>
-                </tr>
-                -->
-              </tbody>
+              <tbody id="happiness_table_body"></tbody>
             </table>
         </div>
     </div>
     {% endblock %}
     {% block footer %}
     <footer class="container">
-      <p>&copy; Rock'n Roll 2018</p>
+        <hr>
+        <br>
+        <br>
+        <p>&copy; Rock'n Roll 2018</p>
     </footer>
     {% endblock %}
     {% block script %}
