--- a/Data_mashup_application/templates/correlation_analysis_new.html
+++ b/Data_mashup_application/templates/correlation_analysis_new.html
@@ -5,17 +5,29 @@
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 {% endblock %}
 
+{% block navbar_cor %}
+          <li class="nav-item active" id="nav_item_correlation">
+            <a class="nav-link" href="{{url_for('correlation_analysis.analyse_pm_happy')}}">Correlation Analysis</a>
+          </li>
+{% endblock%}
+
+{% block navbar_rank %}
+          <li class="nav-item" id="nav_item_happy">
+            <a class="nav-link" href="/#happiness_ranking">Happiness Ranking</a>
+          </li>
+{% endblock %}
+
 {% block content %}
-    <div class="jumbotron">
+<!--     <div class="jumbotron">
         <div class="container">
           <h1 class="display-3">Life Evaluations Worldwide.</h1>
           <p>Rock'n Roll presents the World Happiness Report data together with global PM2.5 Air Pollution figures.<br/>
           Scroll down to see the worldwide happiness ranking, or simply try any analysis | comparison you are interested in.</p>
           <p><a class="btn btn-primary" href="#happiness_ranking" role="button">See Happiness Ranking</a></p>
         </div>
-    </div>
+    </div> -->
 
-    <div class="container">
+<!--     <div class="container">
         <div class="row">
           <div class="col-md-4">
             <h4>Correlation Analysis</h4>
@@ -33,7 +45,7 @@
             <p><a class="btn btn-primary" href="#" role="button">Try It &raquo;</a></p>
           </div>
         </div>
-        <hr>
+        <hr> -->
     </div>
 <!-- google chart -->
     <div id="chart_div" style="width: 900px; height: 500px;"></div>
