--- a/Data_mashup_application/templates/happiness_ranking.html
+++ b/Data_mashup_application/templates/happiness_ranking.html
@@ -26,7 +26,7 @@
           {% endblock %}
           {% block navbar_cor %}
           <li class="nav-item" id="nav_item_correlation">
-            <a class="nav-link" href="{{url_for('correlation_analysis.analyse_pm_happy')}}">Correlation Analysis</a>
+            <a class="nav-link" href="{{url_for('correlation_analysis.analyse_pm_happy_new')}}#chart_div">Correlation Analysis</a>
           </li>
           {% endblock %}
           <li class="nav-item" id="nav_item_similar">
@@ -54,7 +54,7 @@
           <div class="col-md-4">
             <h4>Correlation Analysis</h4>
             <p>Draw scatter plot between two features from the dataset to analyse their correlations.</p>
-            <p><a class="btn btn-primary" href="#" role="button">Try It &raquo;</a></p>
+            <p><a class="btn btn-primary" href="{{url_for('correlation_analysis.analyse_pm_happy_new')}}#chart_div" role="button">Try It &raquo;</a></p>
           </div>
           <div class="col-md-4">
             <h4>Similar Country Searching</h4>
