--- a/Data_mashup_application/templates/similarity_analysis_new.html
+++ b/Data_mashup_application/templates/similarity_analysis_new.html
@@ -2,7 +2,7 @@
 {% block head %}
 {{super()}}
 		<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+		<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
 {% endblock %}
 {% block title %}
 <title>Similar Country Searching</title>
@@ -16,7 +16,7 @@
 
 {% block navbar_rank %}
           <li class="nav-item" id="nav_item_happy">
-            <a class="nav-link" href="#similarityMap">Similar Country Searching</a>
+            <a class="nav-link" href="/#happiness_ranking">Happiness Ranking</a>
           </li>
 {% endblock %}
 
@@ -25,8 +25,8 @@
         <div class="container">
           <h1 class="display-3">Life Evaluations Worldwide.</h1>
           <p>Rock'n Roll presents the World Happiness Report data together with global PM2.5 Air Pollution figures.<br/>
-          Scroll down to see the worldwide happiness ranking, or simply try any analysis | comparison you are interested in.</p>
-          <p><a class="btn btn-primary" href="#happiness_ranking" role="button">See Happiness Ranking</a></p>
+          Scroll down to ues the similar country searching, or simply try any ranking | analysis you are interested in.</p>
+          <p><a class="btn btn-primary" href="#similarityMap" role="button">See Similar Country Searching</a></p>
         </div>
     </div>
 
