close the div wrapping the form in similarity searching part

--- a/Data_mashup_application/templates/similarity_analysis_new.html
+++ b/Data_mashup_application/templates/similarity_analysis_new.html
@@ -73,6 +73,7 @@
 	      </select>
     	  <button type="submit" class="btn btn-primary btn-sm" id="find_similarity">Find similarity</button>
     </form>
+    </div>
 
   <!--  chart -->
 {% endblock %}
