--- a/Data_mashup_application/templates/happiness_ranking.html
+++ b/Data_mashup_application/templates/happiness_ranking.html
@@ -35,7 +35,7 @@
           </li>
           {% endblock %}
           <li class="nav-item" id="nav_item_comparison">
-            <a class="nav-link" href="#">Two-Country Comparison</a>
+            <a class="nav-link" href="{{url_for('two_country_comparison.compare_countries')}}">Two-Country Comparison</a>
           </li>
         </ul>
       </div>
