Added the selected item in 'Year' and 'Sort_By' dropdown menu.

--- a/Data_mashup_application/templates/happiness_ranking.html
+++ b/Data_mashup_application/templates/happiness_ranking.html
@@ -82,6 +82,8 @@
           <li class="nav-item dropdown mr-md-2 mb-1">
             <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Year</button>
             <div class="dropdown-menu">
+              <button class="dropdown-item font-weight-bold" id="dropdown_year_selected" type="button">2016</button>
+              <div class="dropdown-divider"></div>
               <button class="dropdown-item dropdown_year" id="dropdown_year_2015" value="2015" type="button">2015</button>
               <button class="dropdown-item dropdown_year" id="dropdown_year_2016" value="2016" type="button">2016</button>
             </div>
@@ -89,6 +91,8 @@
           <li class="nav-item dropdown mr-md-2 mb-1">
             <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sort By</button>
             <div class="dropdown-menu">
+              <button class="dropdown-item font-weight-bold" id="dropdown_sort_selected" type="button">Happiness Rank</button>
+              <div class="dropdown-divider"></div>
               <button class="dropdown-item dropdown_sort" id="dropdown_sort_country" value="Country" type="button">Country</button>
               <button class="dropdown-item dropdown_sort" id="dropdown_sort_happiness" value="Happiness Rank" type="button">Happiness Rank</button>
               <button class="dropdown-item dropdown_sort" id="dropdown_sort_gdp" value="Economy GDP per Capita" type="button">GDP</button>
