--- a/Data_mashup_application/templates/correlation_analysis_new_ajax.html
+++ b/Data_mashup_application/templates/correlation_analysis_new_ajax.html
@@ -46,7 +46,7 @@
           <div class="col-md-4">
             <h4>Two-Country Comparison</h4>
             <p>Your introduction.</p>
-            <p><a class="btn btn-primary" href="#" role="button">Try It &raquo;</a></p>
+            <p><a class="btn btn-primary" href="{{url_for('two_country_comparison.compare_countries')}}" role="button">Try It &raquo;</a></p>
           </div>
         </div>
         <hr>
