Updated the brief introduction of 'Try It' box for Two-Country Comparison in 3 html files.

--- a/Data_mashup_application/templates/similarity_analysis_new.html
+++ b/Data_mashup_application/templates/similarity_analysis_new.html
@@ -44,7 +44,7 @@
           </div>
           <div class="col-md-4">
             <h4>Two-Country Comparison</h4>
-            <p>Your introduction.</p>
+            <p>Select two countries to see their similarities.</p>
             <p><a class="btn btn-primary" href="{{url_for('two_country_comparison.compare_countries')}}" role="button">Try It &raquo;</a></p>
           </div>
         </div>
